GNOME Bugzilla – Bug 760844
Failed assertion when auto-connecting VLANs/MACVLANs
Last modified: 2016-01-20 10:25:36 UTC
Created attachment 319358 [details] Log carrier_changed: assertion 'priv->state >= NM_DEVICE_STATE_UNAVAILABLE' failed #0 in g_logv () from target:/lib64/libglib-2.0.so.0 #1 in g_log () from target:/lib64/libglib-2.0.so.0 #2 in carrier_changed (self=0x55aaa62c7ef0, carrier=0) at devices/nm-device.c:1327 #3 in nm_device_set_carrier (self=self@entry=0x55aaa62c7ef0, carrier=0) at devices/nm-device.c:1394 #4 in check_carrier (self=self@entry=0x55aaa62c7ef0) at devices/nm-device.c:1842 #5 in realize_start_setup (self=self@entry=0x55aaa62c7ef0, plink=0x7fff1e2d44d0) at devices/nm-device.c:1944 #6 in nm_device_create_and_realize (self=self@entry=0x55aaa62c7ef0, connection=connection@entry=0x55aaa60fe270, parent=0x55aaa61e8650, error=error@entry=0x7fff1e2d4628) at devices/nm-device.c:1782 #7 in _internal_activate_device (self=self@entry=0x55aaa60a21f0, active=active@entry=0x55aaa6337510, error=error@entry=0x7fff1e2d4628) at nm-manager.c:2796 #8 in _internal_activate_generic (self=self@entry=0x55aaa60a21f0, active=active@entry=0x55aaa6337510, error=error@entry=0x7fff1e2d4628) at nm-manager.c:2900 #9 in _internal_activation_auth_done (active=0x55aaa6337510, success=1, error_desc=0x0, user_data1=0x55aaa60a21f0, user_data2=<optimized out>) at nm-manager.c:3036 #10 in auth_done (chain=0x7f41000950f0, error=0x0, unused=<optimized out>, user_data=<optimized out>) at nm-active-connection.c:726 #11 in auth_chain_finish (user_data=0x7f41000950f0) at nm-auth-utils.c:92 #12 in g_main_context_dispatch () from target:/lib64/libglib-2.0.so.0 #13 in g_main_context_iterate.isra () from target:/lib64/libglib-2.0.so.0 #14 in g_main_loop_run () from target:/lib64/libglib-2.0.so.0 #15 in main (argc=1, argv=0x7fff1e2d48e8) at main.c:488 NM version: 1.2-beta1
Created attachment 319382 [details] [review] [PATCH] device: fix check on device state in carrier_changed()
lgtm
Merged to master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=701d98acc5fde5e089a33304e83491350f8656d5